--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,13 @@ android {
     }
 
     buildTypes {
+        debug {
+            buildConfigField("String", "SERVICE_URL", "\"http://newsapi.org/v2/everything?\"")
+            buildConfigField("String", "API_KEY", "\"83f8aa04a2214ff6a8d1f3ccaa46ff41\"")
+        }
         release {
+            buildConfigField("String", "SERVICE_URL", "\"http://newsapi.org/v2/everything?\"")
+            buildConfigField("String", "API_KEY", "\"83f8aa04a2214ff6a8d1f3ccaa46ff41\"")
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
@@ -25,7 +31,7 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
     implementation 'com.google.code.gson:gson:2.8.5'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
